--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Demons Slayer — Gallery</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header class="hero">
-    <div class="hero-inner">
-      <h1>Kimetsu No Yaiba</h1>
-      <p class="subtitle">Kimetsu no Yaiba (Demon Slayer) is a Japanese anime and manga series that follows the journey of Tanjiro Kamado, a kind-hearted boy whose family is slaughtered by demons. His younger sister, Nezuko, survives but is transformed into a demon, setting Tanjiro on a mission to cure her and avenge their loved ones.</p>
-      <a id="viewGallery" class="btn-cta" href="#gallery">View Gallery</a>
+    <div class="container hero-inner">
+      <div class="row">
+        <div class="col-12">
+          <h1>Kimetsu No Yaiba</h1>
+          <p class="subtitle">Kimetsu no Yaiba (Demon Slayer) is a Japanese anime and manga series that follows the journey of Tanjiro Kamado, a kind-hearted boy whose family is slaughtered by demons. His younger sister, Nezuko, survives but is transformed into a demon, setting Tanjiro on a mission to cure her and avenge their loved ones.</p>
+          <a id="viewGallery" class="btn-cta" href="#gallery">View Gallery</a>
+        </div>
+      </div>
     </div>
   </header>
 
-  <main>
-    <section id="controls">
-      <input id="search" placeholder="Search characters..." aria-label="Search characters" />
+  <main class="container-fluid">
+    <section id="controls" class="row">
+      <div class="col-12">
+        <input id="search" placeholder="Search characters..." aria-label="Search characters" />
+      </div>
     </section>
 
-    <section id="gallery" class="gallery" aria-live="polite"></section>
+    <section id="gallery" class="gallery row g-3" aria-live="polite"></section>
   </main>
 
   <div id="modal" class="modal" aria-hidden="true">
@@ -35,9 +42,12 @@
   </div>
 
   <footer class="footer">
-    <p>Designed by Mark Vincent Plaza</p>
+    <div class="container">
+      <p>Designed by Mark Vincent Plaza</p>
+    </div>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
